--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,15 +17,18 @@
     <link rel="icon" type="image/png" href="{% static 'favicon.png' %}">
 </head>
 <body>
+<div class="container">
+    <header>
+        {% include 'header.html' %}
+    </header>
 
-<header>
-    {% include 'header.html' %}
-</header>
-<main class="mt-3">
-    {% block content %}
-    {% endblock content %}
-</main>
+    <main>
 
+        {% block content %}
+        {% endblock content %}
+
+    </main>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
