--- a/app/templates/employees/company_structure.html
+++ b/app/templates/employees/company_structure.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="container">
         <div class="row">
             <div class="col">
                 {% for employee, info in company_structure %}
@@ -14,7 +13,7 @@
                     {% endif %}
 
                 <div class="btn btn-outline-dark p-2 m-1">
-                    {{ employee.position }} — {{ employee }}
+                    <a class='text-decoration-none text-dark' href="{{ employee.get_absolute_url }}">{{ employee.position }} — {{ employee }}</a>
                 </div>
 
                 {% for close in info.close %}
@@ -23,5 +22,4 @@
                 {% endfor %}
             </div>
         </div>
-    </div>
 {% endblock content %}
