--- a/app/templates/employees/employees.html
+++ b/app/templates/employees/employees.html
@@ -1,79 +1,99 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="container">
-        <div class="row mb-3">
-            <div class="col col-12">
-                {# Search form #}
-                <form id="search" method="GET" class="w-90 mb-3 mb-lg-0 me-lg-3">
-                    <input type="search" class="form-control" placeholder="Search..." aria-label="Search"
-                           name="search">
-                </form>
-            </div>
+    {# Search form and Add button #}
+    <div class="d-flex mb-2">
+        {# Search string #}
+        <div class="flex-fill">
+            <form id="search" method="GET">
+                <input type="search" class="form-control" placeholder="Search..." aria-label="Search"
+                       name="search">
+            </form>
         </div>
-        <div class="row">
-            <div class="col">
-                <table class="table table-striped table-hover">
-                    <thead>
+        {# Add employee button #}
+        <div class="flex ms-2">
+            <a class="btn btn-outline-primary" href="{% url 'employees:employee_create' %}">
+                <i class="bi bi-person-plus px-1"></i>
+                <span class="d-none d-md-inline">Add employee</span>
+            </a>
+        </div>
+    </div>
+
+    {# Employees list #}
+    <div class="row">
+        <div class="col">
+            <table class="table table-striped table-hover">
+                <thead>
+                <tr>
+                    <th class="text-center"></th>
+                    <th>Фамилия</th>
+                    <th>Имя</th>
+                    <th>Отчество</th>
+                    <th class="text-center d-none d-md-table-cell">Должность</th>
+                    <th class="text-end d-none d-lg-table-cell">Дата трудоустройства</th>
+                    <th class="text-end d-none d-md-table-cell">Зарплата</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody class="align-middle">
+                {% for employee in employee_list %}
                     <tr>
-                        <th class="text-center">Фото</th>
-                        <th>Фамилия</th>
-                        <th>Имя</th>
-                        <th>Отчество</th>
-                        <th class="text-center">Должность</th>
-                        <th class="text-end">Дата трудоустройства</th>
-                        <th class="text-end">Зарплата</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for employee in employee_list %}
-                        <tr>
-                            <td>{{ employee.photo }}</td>
-                            <td>{{ employee.surname }}</td>
-                            <td>{{ employee.name }}</td>
-                            <td>{{ employee.patronymic }}</td>
-                            <td class="text-center">{{ employee.position }}</td>
-                            <td class="text-end">{{ employee.start_date }}</td>
-                            <td class="text-end">{{ employee.salary }}</td>
-                        </tr>
-
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="row">
-            <!-- Пагинатор -->
-            {% if page_obj.has_other_pages %}
-                <div class="col g-2">
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination justify-content-center">
-                            {# Предыдущие страницы #}
-                            {% if page_obj.has_previous %}
-                                <li class="page-item"><a class="page-link" href="?page=1">&laquo;</a></li>
-                                <li class="page-item"><a class="page-link"
-                                                         href="?page={{ page_obj.previous_page_number }}">&lsaquo;</a>
-                                </li>
+                        <td class="text-center">
+                            {% if employee.photo %}
+                                <img src="{{ employee.photo.url }}" alt="{{ employee.name }} {{ employee.surname }}"
+                                     width="32" height="32" class="rounded-circle">
                             {% endif %}
+                        </td>
+                        <td><a href="{{ employee.get_absolute_url }}">{{ employee.surname }}</a></td>
+                        <td>{{ employee.name }}</td>
+                        <td>{{ employee.patronymic }}</td>
+                        <td class="text-center d-none d-md-table-cell">{{ employee.position }}</td>
+                        <td class="text-end d-none d-lg-table-cell">{{ employee.start_date }}</td>
+                        <td class="text-end d-none d-md-table-cell">{{ employee.salary }}</td>
+                        <td class="text-end">
+                            <a href="{% url 'employees:employee_edit' employee.pk %}"><i
+                                    class="bi bi-pencil pe-2 text-secondary"></i></a>
+                            <a href="{% url 'employees:employee_delete' employee.pk %}"><i
+                                    class="bi bi-trash pe-2 text-secondary"></i></a>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 
-                            {# Текущие страницы #}
-                            <li class="page-item active"><span class="page-link">
+    {# Paginator #}
+    <div class="row">
+        {% if page_obj.has_other_pages %}
+            <div class="col g-2">
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination justify-content-center">
+                        {# Предыдущие страницы #}
+                        {% if page_obj.has_previous %}
+                            <li class="page-item"><a class="page-link" href="?page=1">&laquo;</a></li>
+                            <li class="page-item"><a class="page-link"
+                                                     href="?page={{ page_obj.previous_page_number }}">&lsaquo;</a>
+                            </li>
+                        {% endif %}
+
+                        {# Текущие страницы #}
+                        <li class="page-item active"><span class="page-link">
                         Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
                     </span></li>
 
-                            {# Последующие страницы #}
-                            {% if page_obj.has_next %}
-                                <li class="page-item"><a class="page-link"
-                                                         href="?page={{ page_obj.next_page_number }}">&rsaquo;</a>
-                                </li>
-                                <li class="page-item"><a class="page-link"
-                                                         href="?page={{ page_obj.paginator.num_pages }}">&raquo;</a>
-                                </li>
-                            {% endif %}
-                        </ul>
-                    </nav>
-                </div>
-            {% endif %}
-        </div>
+                        {# Последующие страницы #}
+                        {% if page_obj.has_next %}
+                            <li class="page-item"><a class="page-link"
+                                                     href="?page={{ page_obj.next_page_number }}">&rsaquo;</a>
+                            </li>
+                            <li class="page-item"><a class="page-link"
+                                                     href="?page={{ page_obj.paginator.num_pages }}">&raquo;</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </nav>
+            </div>
+        {% endif %}
     </div>
 {% endblock content %}
